--- a/bin/build
+++ b/bin/build
@@ -20,4 +20,4 @@ cp $TOOLS/firmware/boot/fixup4.dat $BUILD/boot/
 cp $TOOLS/firmware/boot/start4.elf $BUILD/boot/
 cp $TOOLS/firmware/boot/overlays/disable-bt.dtbo $BUILD/boot/overlays/
 cp $CONFIG/boot/config.txt $BUILD/boot/
-cp $BUILD/kernel/kernel.bin $BUILD/boot/kernel8.img
+cp $BUILD/kernel/kernel.bin $BUILD/boot/
