update README.md with some details about the project

--- a/bin/build
+++ b/bin/build
@@ -51,7 +51,7 @@ cat $BUILD/init/init.bin >> $BUILD/kernel/kernel.bin
 
 
 #######################################################################################################################
-# boot directory
+# boot directory to be copied to the SD card
 #######################################################################################################################
 mkdir -p $BUILD/boot/overlays
 
